Pending changes in the mainline
===============================

General
-------

* New advanced job engine

REST API
--------

* "/jobs/..." to manage the jobs from the REST API
* ".../tags" URI was returning only the first value of DicomTags containing 
  multiple numerical value.  It now returns all values in a string separated
  by \\ (i.e.: "1\\2\\3").  Note that, for data already in Orthanc, you'll need
  to reconstruct the data by sending a POST request to the ".../reconstruct" URI.
  This change triggered an update of ORTHANC_API_VERSION from 1.0 to 1.1

Maintenance
-----------

* Fix generation of DICOMDIR if PatientID is empty


Version 1.3.2 (2018-04-18)
==========================

REST API
--------

* "/system" URI returns the version of the Orthanc REST API
* "/tools/now" returns the current UTC (universal) time
* "/tools/now-local" returns the curent local time.
  This was the behavior of "/tools/now" until release 1.3.1.
* Added "?expand" GET argument to "/peers" and "/modalities" routes
* New URI: "/tools/create-media-extended" to generate a DICOMDIR
  archive from several resources, including additional type-3 tags
* Preservation of UID relationships while anonymizing

Lua
---

* New CMake option: "-DENABLE_LUA_MODULES=ON" to enable support for
  loading external Lua modules if the Lua engine is statically linked

Plugins
-------

* New error code: DatabaseUnavailable

Maintenance
-----------

* Orthanc now uses UTC (universal time) instead of local time in its database
* Fix to allow creating DICOM instances with empty Specific Character Set (0008,0005)
* Support of Linux Standard Base
* Static linking against libuuid (from e2fsprogs)
* Fix static build on CentOS 6
* Possibility of using JsonCpp 0.10.6 if the compiler does not support C++11
  with the "-DUSE_LEGACY_JSONCPP=ON" CMake option
* Upgraded dependencies for static and Windows builds:
  - boost 1.66.0
  - curl 7.57.0
  - jsoncpp 1.8.4
  - zlib 1.2.11


Version 1.3.1 (2017-11-29)