@@ -6,6 +6,11 @@ General
 
 * New advanced job engine
 
+Orthanc Explorer
+----------------
+
+* New screen listing all the available studies
+
 REST API
 --------
 
